lda and report tex edited

--- a/report/report.tex
+++ b/report/report.tex
@@ -18,7 +18,7 @@ ece 759 project part 1
 \usepackage[toc, lof, lot]{multitoc}
 
 % add bib to toc
-%\usepackage[nottoc,numbib]{tocbibind} 
+\usepackage[nottoc,numbib]{tocbibind} 
 
 % for block comments in matlab listings
 \usepackage{matlab-prettifier}
@@ -75,5 +75,6 @@ Below are the primary scripts that execute the project. Please see the
 \lstinputlisting[caption=Main Code for Decision Tree on MNIST]{../code/decisionTree/main_dt_MNIST.m}
 \lstinputlisting[caption=Main Code for Extra-Trees on Yale B]{../code/extraTree/main_et_YaleB.m}
 \lstinputlisting[caption=Main Code for LDA on MNIST]{../code/lda/ldacode.m}
+\lstinputlisting[caption=Main Code for LDA on Yale B]{../code/lda/lda_YaleB.m}
 
 \end{document}
