--- a/report/sections/lda.tex
+++ b/report/sections/lda.tex
@@ -1,5 +1,5 @@
 \subsection{Linear Discriminant Analysis (LDA)}
-
+\label{sec:lda}
 Our classification success criterion is the extent to which the error rate is minimized. For LDA, we employ the Bayes Rule to classify our test points after training the classifier. We assign the test point to the class with the highest conditional probability (\textit{i.e.} $P(w_i|x)$, where $w_i$ is the class and $x$ the test vector). In practice, it is not feasible to get conditional probability for a given point unless we have a large amount of data. So we estimate the distribution and calculate the probabilities from there. 
 
 LDA relies on the assumption of a normal distribution for each class. Linear discriminant analysis generally achieves good performance in the tasks of face and object recognition, even though the assumptions of common covariance matrix among groups and normality are often violated \cite{Li2006}.
@@ -15,7 +15,7 @@ In the case of two classes, this reduces to the ratio of between-class variance 
 
 \subsubsection{Algorithm steps}
 Below, we describe the steps necessary to construct the LDA classifier. We begin by instantiating some variables with notation:\\
-\textit{\textbf{n}} is the number of classes. \\ \textit{\textbf{N}} is the total number of training data samples. \\ $\pmb N_i$ is the number of points in each class. \\ $\pmb \mu_i$ and $\pmb \mu$ are mean vectors for each class and global mean for the data.
+\textit{\textbf{n}} is the number of classes. \\ \textit{\textbf{N}} is the total number of training data samples. \\ $\pmb N_i$ is the number of points in each class $i$. \\ $\pmb \mu_i$ and $\pmb \mu$ are mean vectors for each class and global mean for the data.
 
 The steps that we follow in our LDA algorithm are as follows.
  
@@ -56,18 +56,18 @@ The steps that we follow in our LDA algorithm are as follows.
 \end{enumerate}
 
 \subsubsection{Helpful Functions}
- the above pseudo code, we used own created functions. After we do steps 1-7, there is a function \code{classify\_comparison} which applies discriminant function in order to classify the test data. I also tried to calculate if I get good results using the distances from the centers of each classes using \code{classify\_from\_centroid}, although it did not work very well on MNIST dataset it does perform well with Extended Yale B dataset.
+ In the above pseudo code, we used our own supplementary functions. After steps 1-7, there is a function \code{classify\_comparison}, which applies the discriminant function in order to classify the test data. We also tried to calculate if the algorithm is effective in just using the distances from the centers of each class using \code{classify\_from\_centroid}. It did not work very well on MNIST dataset, but it does perform well with the Extended Yale B dataset.
 
 \subsubsection{Derivation of discriminant function}
 We classify the data point as being in class $\pmb i$ if
 
 $P(\pmb x|i) P(i) > P(\pmb x|j) P(j),\ \forall j\neq i$. 
 
-Assuming all covariances are equal $\Sigma = \Sigma_i = \Sigma_j$ and they follow a Multivariate Normal distribution formula $P(\pmb x| i) = \dfrac{1}{(2 \pi)^{n/2} |\Sigma_i|^{1/2}}  exp(-\frac{1}{2} (\pmb x - \pmb \mu_i)^T \Sigma_i^{-1} (\pmb x - \pmb \mu_i) ) $, the above condition becomes
+Assuming all covariances are equal, \textit{i.e.} $\Sigma = \Sigma_i = \Sigma_j$, and that they follow a Multivariate Normal distribution, $P(\pmb x| i) = \dfrac{1}{(2 \pi)^{n/2} |\Sigma_i|^{1/2}}  exp(-\frac{1}{2} (\pmb x - \pmb \mu_i)^T \Sigma_i^{-1} (\pmb x - \pmb \mu_i) ) $, the above condition becomes
 
 $\dfrac{P(i)}{(2 \pi)^{n/2} |\Sigma_i|^{1/2}}  exp(-\frac{1}{2} (\pmb x - \pmb \mu_i)^T \Sigma^{-1} (\pmb x - \pmb \mu_i) ) > \dfrac{P(j)}{(2 \pi)^{n/2} |\Sigma|^{1/2}}  exp(-\frac{1}{2} (\pmb x - \pmb \mu_j)^T \Sigma^{-1} (\pmb x - \pmb \mu_j) ) $
 
-		Taking the logarithm of both sides we get 
+		Taking the logarithm of both sides, 
 
 		$ln(|\Sigma|) - 2 ln(P(i)) + (\pmb x - \pmb \mu_i)^T \Sigma^{-1} (\pmb x - \pmb \mu_i) < ln(|\Sigma|) - 2 ln(P(j)) + (\pmb x - \pmb \mu_j)^T \Sigma^{-1} (\pmb x - \pmb \mu_j)$
 
@@ -75,6 +75,8 @@ $\dfrac{P(i)}{(2 \pi)^{n/2} |\Sigma_i|^{1/2}}  exp(-\frac{1}{2} (\pmb x - \pmb \
 
 		$ ln(P(i)) + \pmb \mu_i \Sigma^{-1} \pmb x^T - \frac{1}{2} \pmb \mu_i \Sigma^{-1} \pmb \mu_i^T > ln(P(j)) + \pmb \mu_j \Sigma^{-1} \pmb x^T - \frac{1}{2} \pmb \mu_j \Sigma^{-1} \pmb \mu_j^T $
 
-		Let $f_i =  \pmb \mu_i \Sigma^{-1} \pmb x^T - \frac{1}{2} \pmb \mu_i \Sigma^{-1} \pmb \mu_i^T + ln(P(i))$, then we can write 
+		Let $f_i =  \pmb \mu_i \Sigma^{-1} \pmb x^T - \frac{1}{2} \pmb \mu_i \Sigma^{-1} \pmb \mu_i^T + ln(P(i))$. Then we can write 
 
 		$ f_i > f_j, \forall j\neq i $
+
+as a measure of the class membership given the discriminant function.
