--- a/report/sections/conclusion.tex
+++ b/report/sections/conclusion.tex
@@ -1,1 +1,3 @@
-In conclusion, we have shown that utilizing Linear Discriminant Analysis, Decision Trees, and Extra-Trees on the Extended Yale Dataset B and MNIST datasets yields a favorable result. In the next part of this project, we will improve our classification accuracy and partake in a more thorough exploration of the hyperparameter space to optimize and generalize our classifiers. Additionally, we will develop a stand-alone demonstration of our algorithms' process from training to testing. 
+In conclusion, we have shown that utilizing Linear Discriminant Analysis, Decision Trees, and Extra-Trees on the Extended Yale Dataset B and MNIST datasets yields a favorable result. We have also shown the results of cross validation performed on our datasets with our algorithms and their hyperparameters. This served to generalize the performance of our classifiers.
+
+For a demonstration of our functions, please navigate to the \code{code} folder and execute the functions given by \code{demonstration\_dt\_MNIST.m} and others, where \code{dt} stands for decision trees and \code{et} stands for extra-trees. These demonstrations illustrate the entire process of partitioning our data, training our classifiers, and calculating the results. 
