update report, code

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -39,6 +39,15 @@
   note = "[Online; accessed 2018-03-14]"
 }
 
+@misc{ scikit:decisiontrees,
+  author = "Scikit Learn",
+  title = "Scikit Documentation - Decision Trees",
+  year = "2018",
+  url = "http://scikit-learn.org/stable/modules/tree.html",
+  note = "[Online; accessed 2018-04-19]"
+}
+
+% lda
 @misc{ images:ldapca,
   author = "Sebastian Raschka",
   title = "What is the difference between LDA and PCA for dimensionality reduction?",
