--- a/bibliography.bib
+++ b/bibliography.bib
@@ -90,3 +90,17 @@ issn="0219-3116",
 doi="10.1007/s10115-006-0013-y",
 url="https://doi.org/10.1007/s10115-006-0013-y"
 }
+@misc{ book:advlda,
+	author = "Petra Nass",
+	title = "Discriminant Analysis",
+	year = "2018",
+	url = "http://www.eso.org/sci/software/esomidas//doc/user/98NOV/volb/node214.html",
+	note = "[Online; accessed 2018-04-20]"
+}
+@misc{ notes:dislda,
+	author = "Ricardo Gutierrez-Osuna",
+	title = "LInear Discriminant Analysis",
+	year = "2018",
+	url = "http://research.cs.tamu.edu/prism/lectures/pr/pr_l10.pdf",
+	note = "[Online; accessed 2018-04-20]"
+}
