--- a/report/report.tex
+++ b/report/report.tex
@@ -27,6 +27,12 @@ ece 759 project part 2
 % for side by side figures
 \usepackage{subfig}
 
+% for \cref{.}
+\usepackage{cleveref}
+\crefformat{section}{\S#2#1#3} % see manual of cleveref, section 8.2.1
+\crefformat{subsection}{\S#2#1#3}
+\crefformat{subsubsection}{\S#2#1#3}
+
 \newcommand{\theassignment}{Project Part 2}
 \newcommand{\thecourse}{Pattern Recognition\\ECE 759}
 
@@ -40,7 +46,7 @@ ece 759 project part 2
 \setcounter{tocdepth}{2}
 \tableofcontents
 \pagebreak
-\chead{}
+\chead{} % for blank 2nd page center header
 \makeatletter
 \let\@starttoc\@multitoc@starttoc
 \listoffigures
@@ -84,6 +90,6 @@ Below are some of the primary scripts that execute the project. Please see the
 \lstinputlisting[caption=Cross Validation Code for Decision Tree on MNIST]{../code/decisionTree/crossValidation/MNIST_cv.m}
 %\lstinputlisting[caption=Cross Validation Code for Extra-Trees on Yale B]{../code/extraTree/crossValidation/YaleB_cv.m}
 \lstinputlisting[caption=Main Code for LDA on MNIST]{../code/lda/ldacode.m}
-\lstinputlisting[caption=Main Code for LDA on Yale B]{../code/lda/lda_YaleB.m}
+%\lstinputlisting[caption=Main Code for LDA on Yale B]{../code/lda/lda_YaleB.m}
 
 \end{document}
