--- a/report/report.tex
+++ b/report/report.tex
@@ -70,7 +70,7 @@ ece 759 project part 2
 \section{Test Results}
 	\subfile{sections/results}
 
-\section{Analysis}
+\section{Analysis of Classifiers}
 	\subfile{sections/analysis}
 
 \section{Conclusion}
