--- a/report/sections/algo_DT.tex
+++ b/report/sections/algo_DT.tex
@@ -90,7 +90,7 @@ The algorithm is also reproduced in pseudocode below.
 \end{algorithm}
 
 \pagebreak
-Once we have trained the decision tree, we can begin to test it by passing the features generated from the test set through the tree. As the features are utilized in propagating through the tree, we eventually reach a leaf node and assign its associated class to the test vector. Testing results can be found in Section (\ref{sec:results}). The testing algorithm is reproduced in psuedocode below.
+Once we have trained the decision tree, we can begin to test it by passing the features generated from the test set through the tree. As the features are utilized in propagating through the tree, we eventually reach a leaf node and assign its associated class to the test vector. Testing results can be found in Section (\ref{sec:bestresults}). The testing algorithm is reproduced in psuedocode below.
 
 \begin{algorithm}[H]
 \DontPrintSemicolon
